objects/Advisory_Idea_Vote__c.object
<CustomObject>
    <description>The object tracks the voting scores of the Ideas from the Advisory Ideas Object</description>
    <fields>
        <fullName>Advisory_Idea__c</fullName>
        <label>Advisory Idea</label>
        <referenceTo>Advisory_Idea__c</referenceTo>
        <relationshipLabel>Advisory Idea Votes</relationshipLabel>
        <relationshipName>Advisory_Idea_Votes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_Value__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voted_By__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Voted By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Employee</value>
            </filterItems>
            <filterItems>
                <field>Contact.User_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Advisory Idea Votes</relationshipLabel>
        <relationshipName>Vote_Casted_By</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Advisory Idea Vote</label>
    <nameField>
        <displayFormat>Vote-{0}</displayFormat>
        <label>Advisory Idea Vote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advisory Idea Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>